k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whitecube-gallery
  namespace: default
spec:
  selector:
    app: whitecube-gallery
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
